--- a/AsyncInn/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <nav class="nav-extended">
         <div class="nav-content">
             <ul class="tabs tabs-transparent">
+                <li class="tab"><a href="Home">Home</a></li>
                 <li class="tab"><a href="Hotel">Hotels</a></li>
                 <li class="tab"><a href="Room">Rooms</a></li>
                 <li class="tab"><a href="Amenities">Amenities</a></li>
