--- a/AsyncInn/AsyncInn/Views/HotelRoom/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/HotelRoom/Index.cshtml
@@ -6,9 +6,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hotel Rooms</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>Hotel Room</title>
 </head>
-<body>
-    <p>Hello from Hotel Rooms!</p>
+<body style="background-image: url()">
+    <nav class="nav-extended">
+        <div class="nav-content">
+            <ul class="tabs tabs-transparent">
+                <li class="tab"><a href="Home">Home</a></li>
+                <li class="tab"><a href="Hotel">Hotels</a></li>
+                <li class="tab"><a href="Room">Rooms</a></li>
+                <li class="tab"><a href="Amenities">Amenities</a></li>
+                <li class="tab"><a href="RoomAmenities">Update Hotels</a></li>
+                <li class="tab"><a href="HotelRoom">Update Rooms</a></li>
+            </ul>
+        </div>
+    </nav>
+    <p>Hello from Hotel Room!</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
