--- a/AsyncInn/AsyncInn/Views/Hotel/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Hotel/Index.cshtml
@@ -1,28 +1,31 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿
+@{Layout = "../Shared/_Layout.cshtml";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Hotel</title>
-</head>
-<body style="background-image: url()">
-    <nav class="nav-extended">
-        <div class="nav-content">
-            <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="Home">Home</a></li>
-                <li class="tab"><a href="Hotel">Hotels</a></li>
-                <li class="tab"><a href="Room">Rooms</a></li>
-                <li class="tab"><a href="Amenities">Amenities</a></li>
-                <li class="tab"><a href="RoomAmenities">Update Hotels</a></li>
-                <li class="tab"><a href="HotelRoom">Update Rooms</a></li>
-            </ul>
+<h1>HOTELS</h1>
+<div class="row">
+    <form class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input placeholder="Hotel Name" id="hotelname" type="text" >
+            </div>
         </div>
-    </nav>
-    <p>Hello from Hotel!</p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
-</html>
+        <div class="row">
+            <div class="input-field col s12">
+                <input placeholder="City Location" id="city" type="text" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input placeholder="State Location" id="state" value="" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input placeholder="Phone Number" id="phone" type="number" >
+            </div>
+        </div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            Submit
+        </button>
+    </form>
+</div>
