--- a/AsyncInn/AsyncInn/Views/HotelRoom/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/HotelRoom/Index.cshtml
@@ -1,28 +1,3 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{Layout = "../Shared/_Layout.cshtml";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Hotel Room</title>
-</head>
-<body style="background-image: url()">
-    <nav class="nav-extended">
-        <div class="nav-content">
-            <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="Home">Home</a></li>
-                <li class="tab"><a href="Hotel">Hotels</a></li>
-                <li class="tab"><a href="Room">Rooms</a></li>
-                <li class="tab"><a href="Amenities">Amenities</a></li>
-                <li class="tab"><a href="RoomAmenities">Update Hotels</a></li>
-                <li class="tab"><a href="HotelRoom">Update Rooms</a></li>
-            </ul>
-        </div>
-    </nav>
-    <p>Hello from Hotel Room!</p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
-</html>
+<p>Hello from Hotel Room!</p>
