--- a/AsyncInn/AsyncInn/Views/Room/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Room/Index.cshtml
@@ -1,28 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿
+@{Layout = "../Shared/_Layout.cshtml";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Room</title>
-</head>
-<body style="background-image: url()">
-    <nav class="nav-extended">
-        <div class="nav-content">
-            <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="Home">Home</a></li>
-                <li class="tab"><a href="Hotel">Hotels</a></li>
-                <li class="tab"><a href="Room">Rooms</a></li>
-                <li class="tab"><a href="Amenities">Amenities</a></li>
-                <li class="tab"><a href="RoomAmenities">Update Hotels</a></li>
-                <li class="tab"><a href="HotelRoom">Update Rooms</a></li>
-            </ul>
+
+<h1>ROOMS</h1>
+<div class="row">
+    <form class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input placeholder="Room Name" id="roomname" type="text">
+            </div>
         </div>
-    </nav>
-    <p>Hello from Room!</p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
-</html>
+        <div class="row">
+            <div class="input-field col s6">
+                <select class="browser-default">
+                    <option value="" disabled selected>Select Layout</option>
+                    <option value="studio">Studio</option>
+                    <option value="oneBedroom">One Bedroom</option>
+                    <option value="twoBedroom">Two Bedrooms</option>
+                </select>
+            </div>
+        </div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            Submit
+        </button>
+    </form>
+</div>
