--- a/AsyncInn/AsyncInn/Views/Amenities/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Amenities/Index.cshtml
@@ -1,17 +1,14 @@
-﻿
-@{Layout = "../Shared/_Layout.cshtml";
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
 }
-
-<h1>Amenities</h1>
-<div class="row">
-    <form class="col s12">
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="Amenity Name" id="amenitiesname" type="text">
-            </div>
-        </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            Submit
-        </button>
-    </form>
-</div>
+@model AsyncInn.Models.Amenities;
+@{
+    Layout = "_Layout";
+}
+<table> 
+    <tr>
+        <td>Amentities Table</td>
+    </tr>
+</table>
