--- a/AsyncInn/AsyncInn/Views/Hotel/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Hotel/Index.cshtml
@@ -1,31 +1,44 @@
-﻿
-@{Layout = "../Shared/_Layout.cshtml";
+﻿@model AsyncInn.Models.Hotel;
+@{
+    Layout = "_Layout";
+    ViewData["Title"] = "Index";
 }
 <h1>HOTELS</h1>
-<div class="row">
-    <form class="col s12">
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="Hotel Name" id="hotelname" type="text" >
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="City Location" id="city" type="text" >
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="State Location" id="state" value="" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="Phone Number" id="phone" type="number" >
-            </div>
-        </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            Submit
-        </button>
-    </form>
-</div>
+
+<a href="Hotel/Create"> Create</a>
+
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>City</th>
+            <th>Phone Number</th>
+
+        </tr>
+    </thead>
+
+    <tbody>
+        @foreach (Hotel hotel in Model)
+        {
+            <tr>
+                <td>@hotel.ID</td>
+                <td>@hotel.Name</td>
+                <td>@hotel.City</td>
+                <td>@hotel.Phone</td>
+                <td>
+                    <button class="btn waves-effect waves-light" actions="Edit" value="@hotel.ID">
+                        Edit
+                        <i class="material-icons">edit</i>
+                    </button>
+                </td>
+                <td>
+                    <button class="btn waves-effect waves-light" asp-action="Delete" asp-route-id="@hotel.ID">
+                        Delete
+                        <i class="material-icons">clear</i>
+                    </button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
