--- a/AsyncInn/AsyncInn/Views/Room/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Room/Index.cshtml
@@ -3,25 +3,8 @@
 }
 
 <h1>ROOMS</h1>
-<div class="row">
-    <form class="col s12">
-        <div class="row">
-            <div class="input-field col s12">
-                <input placeholder="Room Name" id="roomname" type="text">
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s6">
-                <select class="browser-default">
-                    <option value="" disabled selected>Select Layout</option>
-                    <option value="studio">Studio</option>
-                    <option value="oneBedroom">One Bedroom</option>
-                    <option value="twoBedroom">Two Bedrooms</option>
-                </select>
-            </div>
-        </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            Submit
-        </button>
-    </form>
-</div>
+<table>
+    <tr>
+        <td>Rooms</td>
+    </tr>
+</table>
