--- a/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
+++ b/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>@ViewBag.Title</title>
 </head>
 <body>
