working on background image for home page

--- a/AsyncInn/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@{
     Layout = "_Layout";
 }
-<p>Hello from Home!</p>
+<div id="homePage" style="background-image: url(img/hotel.jpg);">
+
+</div>
