--- a/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
+++ b/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
@@ -6,7 +6,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>@ViewBag.Title</title>
 </head>
-<body style="display: flex; min-height: 100vh; flex-direction:column;">
+<body style="        
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+        background-image: url('../img/hotel.jpg');
+">
     <nav class="nav-extended">
         <div class="nav-content">
             <ul class="tabs tabs-transparent">
