deployed and added tests for hotel/amenities/room

--- a/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
+++ b/AsyncInn/AsyncInn/Views/Shared/_Layout.cshtml
@@ -4,14 +4,17 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>@ViewBag.Title</title>
 </head>
-<body style="        
+<body style="    
         display: flex;
         min-height: 100vh;
         flex-direction: column;
-        background-image: url('../img/hotel.jpg');
-">
+        background-repeat: no-repeat;
+        background-image: url(/img/hotel.jpg);
+        background-size:cover;
+    ">
     <nav class="nav-extended">
         <div class="nav-content">
             <ul class="tabs tabs-transparent">
