working on hotelroom controller

--- a/AsyncInn/AsyncInn/Views/HotelRoom/Create.cshtml
+++ b/AsyncInn/AsyncInn/Views/HotelRoom/Create.cshtml
@@ -5,10 +5,10 @@
 }
 <h1>HOTELS</h1>
 <div class="row">
-    <form class="col s12" asp-action="Create">
+    <form class="col s12" asp-action="Create" method="post">
         <div class="row">
             <div class="input-field col s6">
-                <select asp-for="HotelRoom.HotelID">
+                <select asp-for="HotelID">
                     <option value="" disabled selected>Select Hotel</option>
                     @foreach (var hotel in Model.Hotels)
                     {
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <select asp-for="HotelRoom.RoomID">
+                <select asp-for="RoomID">
                     <option value="" disabled selected>Select Room</option>
                     @foreach (var room in Model.Rooms)
                     {
@@ -30,12 +30,12 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Room Number" type="text" asp-for="HotelRoom.RoomNumber">
+                <input placeholder="Room Number" type="text" asp-for="RoomNumber">
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Rate" type="text" asp-for="HotelRoom.Rate">
+                <input placeholder="Rate" type="text" asp-for="Rate">
             </div>
         </div>
         <input class="btn waves-effect waves-light" type="submit" value="Submit" />
